2007-12-24  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat.tcl: Broadcast presence changes to the xmpp server to
	ensure that roster contacts and notified as well as MUC members.
	* choosefont/critcl.tc: critcl stuff moved to critcl2 which uses
	8.5 compatible platform testing code.

2007-12-03  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat.tcl: Fixed erroneous handling of 404 error condition.
	Added some extra checks for the existence of nick colours.

2007-10-11  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat.tcl: Enabled status bar in the absence of ttk widgets

2007-10-09  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat_mjpeg.tcl: Use asynchronous connect to avoid blocking
	when reconnecting the stream (interrupts the audio).

2007-10-04  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat.tcl:       Display images from the VCARD if present.
	* tkchat_mjpeg.tcl: Fix namespace of addStatus call.

	* tkchat.tcl:       Reworked the hooks system to include priority
	* tkchat_mjpeg.tcl: and added an options hook to permit plugins to
	* tkchat_mms.tcl:   add a page to the options dialog. All plugins now
	* tkchat_rss.tcl:   use hooks. RSS removed from the main file.
	* tkchat_clock.tcl  Generalized the NOLA plugin into a clock demo.

2007-10-01  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat.tcl: Add tabs to Options dialog (with suitable non-tile
	fallback). Add save hooks for extensions to use.

2007-09-30  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat.tcl:       Ignore groupchat messages with empty bodies 
	* tkchat_mjpeg.tcl: (ie: coccinella whiteboard messages). Remove 
	* tkchat_mms.tcl:   the conference special features/streams.

2007-09-26  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat.tcl:   Implement the login hooks.
	* tkchat_mjpeg: Add watchdog.

2007-09-25  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* tkchat_mjpeg:    MJPEG stream handling for the Tcl conference
	